make the website more condensed on mobile to avoid excessive scrolling

--- a/htdocs/css/style-new.css
+++ b/htdocs/css/style-new.css
@@ -119,6 +119,12 @@
     #bgvid {
         display: none;
     }
+    .navbar {
+        padding: .1rem 1rem
+    }
+    body {
+        line-height: 1;
+    }
 }
 
 #invitation-link {
